frontend/test/should_fail/exec_028.grg
rule r : (Node) {
  y : Node;
  modify{
    exec( (y)=r ); // nothing may be assigned to graph element y
    return (y);
  }
}
